--- a/sass/blocks/sub-menu/_sub-menu.scss
+++ b/sass/blocks/sub-menu/_sub-menu.scss
@@ -3,10 +3,12 @@
   display: block;
   position: absolute;
   width: 14.3rem;
+  z-index: 2;
   top: 3.7rem;
   padding: 0;
   margin: 0;
   list-style: none;
+  box-shadow: 0 2rem 2rem 0 rgba($black-three, 0.4);
 }
 
 .side-nav__item:hover .sub-menu {
