--- a/sass/variables/_variables.scss
+++ b/sass/variables/_variables.scss
@@ -32,6 +32,7 @@ $pink-one: #fbded8;
 
 $black-one: #323232;
 $black-two: #353535;
+$black-three: #000000;
 
 $gray-one: #999999;
 $gray-two: #9a9a9a;
